Dropdown clipping issue

--- a/src/css/simplemde.css
+++ b/src/css/simplemde.css
@@ -30,16 +30,16 @@
 
 .editor-toolbar {
     position: relative;
-    opacity: .6;
+/*    opacity: .6;*/
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
     -o-user-select: none;
     user-select: none;
-    padding: 0 10px;
-    border-top: 1px solid #bbb;
-    border-left: 1px solid #bbb;
-    border-right: 1px solid #bbb;
+    padding: 8px 10px;
+    border-top: 1px solid #ddd;
+    border-left: 1px solid #ddd;
+    border-right: 1px solid #ddd;
     border-top-left-radius: 4px;
     border-top-right-radius: 4px;
 }
@@ -48,18 +48,19 @@
 /* bootstrap */
 
 .editor-toolbar .btn-group .btn {
-	background-color: #F0F0F0;
-	color: #000;
-	line-height:1.2rem;
+    background-color: #F0F0F0;
+    color: #000;
+    line-height: 1.2rem;
 }
 
 .editor-toolbar .btn-group {
-	padding-right: 0.2rem;
+    padding-right: 0.2rem;
 }
 
 .editor-toolbar .btn-group:last-child {
-	padding-right: 0;
+    padding-right: 0;
 }
+
 
 /*
 .editor-toolbar:after,
@@ -87,8 +88,8 @@
 .editor-toolbar.fullscreen {
     width: 100%;
     height: 50px;
-/*    overflow-x: auto;*/
-/*    overflow-y: hidden;*/
+    /*    overflow-x: auto;*/
+    /*    overflow-y: hidden;*/
     white-space: nowrap;
     padding-top: 10px;
     padding-bottom: 10px;
@@ -99,8 +100,9 @@
     top: 0;
     left: 0;
     opacity: 1;
-    z-index: 9;
+    z-index: 9999;
 }
+
 
 /*
 .editor-toolbar.fullscreen::before {
